fixed column spacing issue

--- a/src/components/Collage/Collage.css
+++ b/src/components/Collage/Collage.css
@@ -2,8 +2,7 @@
     position: absolute;
     top: -60px;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    height: 90vh;
     max-width: 100vw;
     display: flex;
     flex-flow: row wrap;
